<resources>
    <string name="app_name">American Football Scores</string>

    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>

    <string name="_0">0</string>

    <string name="touchdown">Touchdown</string>
    <string name="field_goal">Field goal</string>
    <string name="award_points">Award Points</string>
    <string name="extra_point">Extra Point</string>

    <string name="reset">Reset</string>
</resources>
